--- a/views/students.ejs
+++ b/views/students.ejs
@@ -10,6 +10,14 @@
     <div class="container mt-5">
         <h1 class="text-center mb-4">Students Data</h1>
         <div class="container text-center my-3"><a href="/students/add">Add Student</a></div>
+       
+        <div class="input-group mb-3">
+            <input type="text" id="myInput" onkeyup="search()" class="form-control" placeholder="Search students email">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" onclick="search()">Search</button>
+            </div>
+        </div>
+     
         <% if (alert){ %>
             <div class="alert alert-<%= alert.type %> text-center" role="alert">
                 <%= alert.message %>
@@ -17,7 +25,7 @@
         <% } %>
         
         <% if(data){ %>
-            <table class="table table-striped">
+            <table class="table table-striped" id="myTable">
                 <thead>
                     <tr>
                         <% for(let key in data[0]){ %>
@@ -43,6 +51,26 @@
         <% } %>
     </div>
     <div class="container text-center mt-5"><a href="/">Home</a></div>
+    <script>
+        function search(){
+            let txtValue
+            let input = document.getElementById('myInput')
+            let filter = input.value.toUpperCase()
+            let table = document.getElementById('myTable')
+            let tr = document.getElementsByTagName('tr')
 
+            for(let i = 0; i < tr.length; i++){
+                let td = tr[i].getElementsByTagName("td")[3]
+                if(td){
+                    txtValue = td.textContent || td.innerText
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }   
+            }
+        }
+    </script>
 </body>
 </html>
