--- a/views/content/subjectForm.ejs
+++ b/views/content/subjectForm.ejs
@@ -1,10 +1,12 @@
-<h3>New Subject</h3>
-
 <div class="container">
+  <h3>New Subject</h3>
   <form action="/subjects/add" method="POST">
-    <label for="fname">Subject Name</label>
-    <input type="text" id="sname" name="subject_name" placeholder="Subject name..">
+    
+    <div class="form-group">
+      <label for="fname">Subject Name</label>
+      <input type="text" class="form-control" id="sname" name="subject_name" placeholder="Subject name..">
+    </div>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" class="btn btn-outline-success">
   </form>
 </div>
