--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <title>Document</title>
+        <title>Subjects</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/teachers">Teachers</a>
                 </li>
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Subjects<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/subjects">Subjects<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
                 <a href="/students/add" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Add Student</a>
