--- a/views/teacheredit.ejs
+++ b/views/teacheredit.ejs
@@ -6,21 +6,21 @@
         <title>List Teachers</title>
     </head>
         <h1>Edit Teacher Data</h1>
-        <form action="/teacher/<%= data[0].id %>/edit" method="post">
+        <form action="/teacher/<%= data.id %>/edit" method="post">
         <label for = "">ID</label>
-        <input type="text" name="id" value="<%= data[0].id %>" readonly> <br> <br>
+        <input type="text" name="id" value="<%= data.id %>" readonly> <br> <br>
         <br>
         <label for = "">First Name</label>
-        <input type="text" name="first_name" value="<%= data[0].first_name %>"> <br> <br>
+        <input type="text" name="first_name" value="<%= data.first_name %>"> <br> <br>
         <br>
         <label for = "">Last Name</label>
-        <input type="text" name="last_name" value="<%= data[0].last_name %>"> <br> <br>
+        <input type="text" name="last_name" value="<%= data.last_name %>"> <br> <br>
         <br>
         <label for = "">Email</label>
-        <input type="text" name="email" value="<%= data[0].email %>"> <br> <br>
+        <input type="text" name="email" value="<%= data.email %>"> <br> <br>
         <br>
         <label for = "">Gender</label>
-        <input type="text" name="gender" value="<%= data[0].gender %>"> <br> <br>
+        <input type="text" name="gender" value="<%= data.gender %>"> <br> <br>
         
         <button type="submit">SAVE</button>
         </form>
