--- a/views/student/index.ejs
+++ b/views/student/index.ejs
@@ -44,6 +44,8 @@
     <br>
     <a href="/students/add" class="waves-effect waves-light btn"><i class="material-icons right">add</i>Add Student</a>
   </div>
+  <!--JavaScript at end of body for optimized loading-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
