--- a/views/students.ejs
+++ b/views/students.ejs
@@ -10,34 +10,37 @@
 </head>
 <body>
 <%- include('content/navigation/navbar.ejs') %>
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Gender</th>
-      <th scope="col">Birth Date</th>
-      <th style="text-align: center;">Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% if (data) {data.forEach(el => { %>
-    <tr>
-      <td><%= el.id %></td>
-      <td><%= el.first_name %></td>
-      <td><%= el.last_name %></td>
-      <td><a href="<%= `/students/${el.email}`%>"><%= el.email %></a></td>
-      <td><%= el.gender %></td>
-      <td><%= new Date(el.birth_date).toLocaleString() %></td>
-      <td style="text-align: center;">
-        <a href="/students/edit?id=1" class="btn btn-outline-info" role="button">Edit</a>
-        <a href="/students/delete?id=1" class="btn btn-outline-danger" role="button">Delete</a>
-      </td>
-    </tr>
-    <% })} %>
-  </tbody>
-</table>
+<div class="container">
+  <%- include('content/callout/callout.ejs') %>
+  <table class="table">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Gender</th>
+        <th scope="col">Birth Date</th>
+        <th style="text-align: center;">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if (data) {data.forEach(el => { %>
+      <tr>
+        <td><%= el.id %></td>
+        <td><%= el.first_name %></td>
+        <td><%= el.last_name %></td>
+        <td><a href="<%= `/students/${el.email}`%>"><%= el.email %></a></td>
+        <td><%= el.gender %></td>
+        <td><%= new Date(el.birth_date).toLocaleString() %></td>
+        <td style="text-align: center;">
+          <a href="/students/edit?id=<%= el.id %>" class="btn btn-outline-info" role="button">Edit</a>
+          <a href="/students/delete?id=<%= el.id %>" class="btn btn-outline-danger" role="button">Delete</a>
+        </td>
+      </tr>
+      <% })} %>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
