--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -10,32 +10,35 @@
 </head>
 <body>
 <%- include('content/navigation/navbar.ejs') %>
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Gender</th>
-      <th scope="col" style="text-align: center;">Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% if (data) { data.forEach(el => {%>
-    <tr>
-      <th scope="row"><%= el.id %></th>
-      <td><%= el.first_name %></td>
-      <td><%= el.last_name %></td>
-      <td><%= el.email %></td>
-      <td><%= el.gender %></td>
-      <td style="text-align: center;">
-        <a href="/teachers/edit?id=<%= el.id %>" class="btn btn-outline-info btn-sm" role="button">Edit</a>
-        <a href="/teachers/delete?id=<%= el.id %>" class="btn btn-outline-danger btn-sm" role="button">Delete</a>
-      </td>
-    </tr>
-    <% })} %>
-  </tbody>
-</table>
+<div class="container">
+  <%- include('content/callout/callout.ejs') %>
+  <table class="table">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Gender</th>
+        <th scope="col" style="text-align: center;">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if (data) { data.forEach(el => {%>
+      <tr>
+        <th scope="row"><%= el.id %></th>
+        <td><%= el.first_name %></td>
+        <td><%= el.last_name %></td>
+        <td><%= el.email %></td>
+        <td><%= el.gender %></td>
+        <td style="text-align: center;">
+          <a href="/teachers/edit?id=<%= el.id %>" class="btn btn-outline-info btn-sm" role="button">Edit</a>
+          <a href="/teachers/delete?id=<%= el.id %>" class="btn btn-outline-danger btn-sm" role="button">Delete</a>
+        </td>
+      </tr>
+      <% })} %>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
