school-application-mvc+pg (14/04/2020)

--- a/views/edit-students.ejs
+++ b/views/edit-students.ejs
@@ -14,19 +14,19 @@
 
     <form action="/students/<%=id%>/edit" method="post">
         <label>First Name:</label><br>
-        <input type="text" name="firstname" placeholder="<%=dataById.first_name%>"> <br><br>
+        <input type="text" name="firstname" value="<%=data.first_name%>"> <br><br>
         
         <label>Last Name:</label><br>
-        <input type="text" name="lastname" placeholder="<%=dataById.last_name%>"> <br><br>
+        <input type="text" name="lastname" value="<%=data.last_name%>"> <br><br>
         
         <label>Email:</label><br>
-        <input type="text" name="email" placeholder="<%=dataById.email%>"> <br><br>
+        <input type="text" name="email" value="<%=data.email%>"> <br><br>
         
         <label>Gender:</label><br>
-        <input type="text" name="gender" placeholder="<%=dataById.gender%>"> <br><br>
+        <input type="text" name="gender" value="<%=data.gender%>"> <br><br>
         
         <label>Birth Date:</label><br>
-        <input type="text" name="birthdate" placeholder="<%=dataById.birth_date%>"> <br><br>
+        <input type="text" name="birthdate" value="<%=data.birth_date%>"> <br><br>
         <button type="submit">Submit</button>
     </form>
 </body>
