--- a/views/students-by-email.ejs
+++ b/views/students-by-email.ejs
@@ -3,35 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>students</title>
+    <title>student by email</title>
 </head>
 <body>
-    <h1>Data Students</h1>
-
-    <form action="/students/:email" method="POST">
-        <label>Search Student By Email:</label><br>
-        <input type="text" name="email"> <br>
-        <button type="submit">Search</button>
-    </form>
-    <br>
-
-    <button><a href="/students/add">Add Students</a></button><br><br>
-
+    <h1>Data Student By Email</h1>
     
-    <table border="1">
-        <thead>
-            <tr>
-                <td>ID</td>
-                <td>FIRST NAME</td>
-                <td>LAST NAME</td>
-                <td>EMAIL</td>
-                <td>GENDER</td>
-                <td>BIRTH DATE</td>
-                <td colspan="2">OPTIONS</td>
-            </tr>
-        </thead>
-        <tbody>
-            <%if(data) {%>
+    <%if(data[0]) {%>
+        <table border="1">
+            <thead>
+                <tr>
+                    <td>ID</td>
+                    <td>FIRST NAME</td>
+                    <td>LAST NAME</td>
+                    <td>EMAIL</td>
+                    <td>GENDER</td>
+                    <td>BIRTH DATE</td>
+                    <td colspan="2">OPTIONS</td>
+                </tr>
+            </thead>
+            <tbody>
                 <%for(let i = 0; i < data.length; i++) {%>
                     <tr>
                         <td><%= data[i].id %></td>
@@ -44,11 +34,10 @@
                         <td><button><a href="/students/<%= data[i].id %>/delete">Delete</a></button></td>
                     </tr>
                 <%}%>
-            <%}%>
-        </tbody>
-    </table>
-
-    <br><br>
-    <button><a href="/">Back to Home</a></button>
+            </tbody>
+        </table>
+    <%} else {%>
+        <h3>Data students dengan email: <%=email%> tidak ada </h3>
+    <%}%>
 </body>
 </html>
