--- a/views/students_add.ejs
+++ b/views/students_add.ejs
@@ -28,6 +28,10 @@
   </nav>
 
   <div class="container">
+    <h1>Add Students Data</h1>
+    <a href="/" type="button" class="btn btn-secondary">Back to home</a>
+    <a href="/students" type="button" class="btn btn-primary">Show Students Data</a><br><br>
+    
     <form method="POST">
       <div class="form-group">
         <label for="first_name">First Name</label>
