--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -27,24 +27,26 @@
     </div>
   </nav>
 
-  <h1>Teachers Data</h1>
-  <a href="/" type="button" class="btn btn-secondary">Back to home</a>
-  <br><br>
-  <table class="table table-striped">
-    <tr>
-      <th>Id</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
-    </tr>
-    <% data.forEach(dat => { %>
+  <div class="container">
+    <h1>Teachers Data</h1>
+    <a href="/" type="button" class="btn btn-secondary">Back to home</a>
+    <br><br>
+    <table class="table table-striped">
       <tr>
-        <td><%= dat.id %></td>
-        <td><%= dat.first_name %></td>
-        <td><%= dat.last_name %></td>
-        <td><%= dat.email %></td>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
       </tr>
-    <% }) %>
-  </table>
+      <% data.forEach(dat => { %>
+        <tr>
+          <td><%= dat.id %></td>
+          <td><%= dat.first_name %></td>
+          <td><%= dat.last_name %></td>
+          <td><%= dat.email %></td>
+        </tr>
+      <% }) %>
+    </table>
+  </div>
 </body>
 </html>
