--- a/views/student/add.ejs
+++ b/views/student/add.ejs
@@ -11,52 +11,83 @@
   <meta charset="UTF-8">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      display: flex;
+      min-height: 100vh;
+      flex-direction: column;
+    }
+
+    main {
+      flex: 1 0 auto;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1 class="center-align">School App 0.1</h1>
-    <h3>Add New Student Data</h3>
-    <div class="row">
-      <form class="col s12" action="/students/add" method="post">
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="first_name" name="first_name" type="text" class="validate" autofocus required>
-            <label for="first_name">First Name</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="last_name" name="last_name" type="text" class="validate" required>
-            <label for="last_name">Last Name</label>
-          </div>
-        </div>
-        <p style="color: #9e9e9e;">Gender</p>
-        <p>
-          <label>
-            <input name="gender" value="male" type="radio" class="with-gap" checked required />
-            <span>Male</span>
-          </label>
-        </p>
-        <p>
-          <label>
-            <input name="gender" value="female" type="radio" class="with-gap" />
-            <span>Female</span>
-          </label>
-        </p>
-        <p>
+  <header>
+    <nav>
+      <div class="nav-wrapper container">
+        <a href="/" class="brand-logo">School App</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/students">Students</a></li>
+          <li><a href="/teachers">Teachers</a></li>
+          <li><a href="/subjects">Subjects</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container">
+      <h3>Add New Student Data</h3>
+      <div class="row">
+        <form class="col s12" action="/students/add" method="post">
           <div class="row">
             <div class="input-field col s12">
-              <input id="email" name="email" type="email" class="validate" required>
-              <label for="email">Email</label>
+              <input id="first_name" name="first_name" type="text" class="validate" autofocus required>
+              <label for="first_name">First Name</label>
             </div>
           </div>
-          <button type="submit" class="waves-effect waves-light btn"><i class="material-icons right">add</i>Add
-            Student</button>
-          <a href="/students" class="waves-effect waves-light btn right">Show All Students</a>
-      </form>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="last_name" name="last_name" type="text" class="validate" required>
+              <label for="last_name">Last Name</label>
+            </div>
+          </div>
+          <p style="color: #9e9e9e;">Gender</p>
+          <p>
+            <label>
+              <input name="gender" value="male" type="radio" class="with-gap" checked required />
+              <span>Male</span>
+            </label>
+          </p>
+          <p>
+            <label>
+              <input name="gender" value="female" type="radio" class="with-gap" />
+              <span>Female</span>
+            </label>
+          </p>
+          <p>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" name="email" type="email" class="validate" required>
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <button type="submit" class="waves-effect waves-light btn"><i class="material-icons right">add</i>Add
+              Student</button>
+            <a href="/students" class="waves-effect waves-light btn right">Show All Students</a>
+        </form>
+      </div>
     </div>
-  </div>
+  </main>
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container">
+        © 2020 SchoolApp
+      </div>
+    </div>
+  </footer>
   <!--JavaScript at end of body for optimized loading-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
