--- a/views/student/detail.ejs
+++ b/views/student/detail.ejs
@@ -39,23 +39,25 @@
   </header>
   <main>
     <div class="container">
-      <h3>Subjects Data</h3>
+      <h3>Student Data with email <%= data.email %></h3>
     
       <table class="highlight">
         <thead>
           <tr>
             <th>ID</th>
-            <th>Subject Name</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
           </tr>
         </thead>
     
         <tbody>
-          <% data.forEach(s => { %>
           <tr>
-            <td><%= s.id %></td>
-            <td><%= s.subject_name %></td>
+            <td><%= data.id %></td>
+            <td><%= data.first_name %></td>
+            <td><%= data.last_name %></td>
+            <td><%= data.email %></td>
           </tr>
-          <% }) %>
         </tbody>
       </table>
     
