--- a/views/student/index.ejs
+++ b/views/student/index.ejs
@@ -11,39 +11,72 @@
   <meta charset="UTF-8">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      display: flex;
+      min-height: 100vh;
+      flex-direction: column;
+    }
+
+    main {
+      flex: 1 0 auto;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1 class="center-align">School App 0.1</h1>
-    <h3>Students Data</h3>
+  <header>
+    <nav>
+      <div class="nav-wrapper container">
+        <a href="/" class="brand-logo">School App</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/students">Students</a></li>
+          <li><a href="/teachers">Teachers</a></li>
+          <li><a href="/subjects">Subjects</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container">
+      <h3>Students Data</h3>
 
-    <table class="highlight">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Email</th>
-          <th>Option</th>
-        </tr>
-      </thead>
+      <table class="highlight">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Option</th>
+          </tr>
+        </thead>
 
-      <tbody>
-        <% data.forEach(s => { %>
-        <tr>
-          <td><%= s.id %></td>
-          <td><%= s.first_name %></td>
-          <td><%= s.last_name %></td>
-          <td><%= s.email %></td>
-          <td><a href="/students/<%= s.id %>/edit">Edit</a> | <a href="/students/<%= s.id %>/delete">Delete</a></td>
-        </tr>
-        <% }) %>
-      </tbody>
-    </table>
-    <br>
-    <a href="/students/add" class="waves-effect waves-light btn"><i class="material-icons right">add</i>Add Student</a>
-  </div>
+        <tbody>
+          <% data.forEach(s => { %>
+          <tr>
+            <td><%= s.id %></td>
+            <td><%= s.first_name %></td>
+            <td><%= s.last_name %></td>
+            <td><%= s.email %></td>
+            <td><a href="/students/<%= s.id %>/edit">Edit</a> | <a href="/students/<%= s.id %>/delete" onclick="return confirm('Are you sure you want to delete this item?')">Delete</a></td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <br>
+      <a href="/students/add" class="waves-effect waves-light btn"><i class="material-icons right">add</i>Add Student</a>
+      <br>
+      <p></p>
+    </div>
+  </main>
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container">
+        © 2020 SchoolApp
+      </div>
+    </div>
+  </footer>
   <!--JavaScript at end of body for optimized loading-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
