--- a/views/subject/detail.ejs
+++ b/views/subject/detail.ejs
@@ -11,30 +11,63 @@
   <meta charset="UTF-8">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      display: flex;
+      min-height: 100vh;
+      flex-direction: column;
+    }
+
+    main {
+      flex: 1 0 auto;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1 class="center-align">School App 0.1</h1>
-    <h3>Subject Data With ID <%= data[0].id %></h3>
-
-    <table class="highlight">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Subject Name</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <tr>
-          <td><%= data[0].id %></td>
-          <td><%= data[0].subject_name %></td>
-        </tr>
-      </tbody>
-    </table>
-
-  </div>
+  <header>
+    <nav>
+      <div class="nav-wrapper container">
+        <a href="/" class="brand-logo">School App</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/students">Students</a></li>
+          <li><a href="/teachers">Teachers</a></li>
+          <li><a href="/subjects">Subjects</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container">
+      <h3>Subject Data With ID <%= data[0].id %></h3>
+    
+      <table class="highlight">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Subject Name</th>
+          </tr>
+        </thead>
+    
+        <tbody>
+          <tr>
+            <td><%= data[0].id %></td>
+            <td><%= data[0].subject_name %></td>
+          </tr>
+        </tbody>
+      </table>
+    
+    </div>
+  </main>
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container">
+        © 2020 SchoolApp
+      </div>
+    </div>
+  </footer>
+  <!--JavaScript at end of body for optimized loading-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
