--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -9,7 +9,7 @@
       margin: 0 10%;
     }
   </style>
-  <title>Document</title>
+  <title>School Aplication</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
