--- a/views/students.ejs
+++ b/views/students.ejs
@@ -30,6 +30,11 @@
         </div>
     </nav>
     <div class="jumbotron">
+        <% if (alert) { %>
+        <div class="alert alert-<%= alert.type %>" role="alert">
+            <%= alert.message %>
+        </div>
+        <% } %>
         <% if(data.length) { %>
         <table class="table">
             <thead>
@@ -40,6 +45,7 @@
                     <th scope="col">Email</th>
                     <th scope="col">Gender</th>
                     <th scope="col">Birth Date</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -51,6 +57,9 @@
                     <td><%= element.email %></td>
                     <td><%= element.gender %></td>
                     <td><%= element.birth_date %></td>
+                    <td><a href="/students/<%= element.id %>/edit" type="button" class="btn btn-danger">Edit</a>
+                        <a href="/students/<%= element.id %>/delete" type="button" class="btn btn-warning">Delete</a>
+                    </td>
                 </tr>
                 <% }) %>
             </tbody>
