--- a/views/students.ejs
+++ b/views/students.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="jumbotron">
+        <h1>Student List</h1>
+        <a href="/" role="button">Homepage</a>
+        <a href="/student/add" role="button">ADD New Student</a>
         <% if(data.length) { %>
             <table class="table">
                 <thead>
@@ -18,6 +21,7 @@
                         <th scope="col">Email</th>
                         <th scope="col">Gender</th>
                         <th scope="col">Birth Date</th>
+                        <th colspan="2">Option</th>
                     </tr>
             </thead>
             <tbody>
@@ -30,6 +34,8 @@
                         <td><%= element.email %></td>
                         <td><%= element.gender %></td>
                         <td><%= element.birth_date %></td>
+                        <td><a href="/student/<%= element.id%>/edit" role="button">EDIT</a></td>
+                        <td><a href="/student/<%= element.id%>/delete" role="button">DELETE</a></td>
                     </tr>
                <% }) %>
         </tbody>
