--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>students page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>School App</title>
-  <body>
-    <h1>List of students</h1>
+<%- include ('partials/header', {title: 'List of students'})%>
+    <%- include ('partials/middle')%>
     <table class="table table-dark">
   <thead>
     <tr>
@@ -27,14 +20,9 @@
       <th ><%=data[i].email%></th>
       <th ><%=data[i].gender%></th>
       <th ><%=data[i].birthdate%></th>
-      <th> <a href='/students/<%= data[i].id %>/edit'> Edit</a> </th>
-      <th> <a href='/students/<%= data[i].id %>/delete'> Delete</a></th>
+      <th> <a href='/students/<%= data[i].id %>/edit'> Edit</a></th> %>
+     <th> <a href='/students/<%= data[i].id %>/delete'> Delete</a></th> %> 
     </tr>
   <% } %>
-    </tr>
-  </tbody>
-
-    </table>
-    <!-- <a href="/students/add"> Add</a> -->
-  </body>
-</html>
+  <a href="/students/add">Add Student!</a>
+    <%- include ('partials/footer')%>
